Closed Bug 221706 Opened 21 years ago Closed 6 years ago

Margins on printout are larger than defined.

Categories

(Core :: Printing: Output, defect)

x86
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: Volker.Seibt, Assigned: bdahl)

References

(Depends on 2 open bugs, Blocks 2 open bugs)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.0; de-AT; rv:1.4) Gecko/20030624
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; de-AT; rv:1.4) Gecko/20030624

All margins specified to be 10 mm (Millimeters):
Left and right margins are 20 and 22 mm. Top and botton margin seem OK.

All margins specified to be 40 mm:
Left and right margins are 56 mm. Top and botton margin are 47 mm (space between
header line and content).

This happened with a Postscript printer.

(With version 1.3 this was OK.)

Reproducible: Always

Steps to Reproduce:
1. Set the print margins.
2. Print a web page.
3. See the margins on printed output.

Actual Results:  
The margins are too large, especially left and right margins.

Expected Results:  
Set the margins to the values specified.
Version: Trunk → 1.4 Branch
Is this a problem with a current (1.6a trunk) build?  I believe this was fixed a
short time back...
No - it's version 1.4 like specified. When it's fixed now it's fine!
even when i zero all borders, i still see a 15-20mm margin all around in 1.6a
Blocks: 245023
Blocks: 274460
Status: UNCONFIRMED → NEW
Ever confirmed: true
*** Bug 245023 has been marked as a duplicate of this bug. ***
No longer blocks: 245023
*** Bug 274460 has been marked as a duplicate of this bug. ***
*** Bug 289720 has been marked as a duplicate of this bug. ***
I too have noticed issues with the left and right hand margins, particularly the
right.  If I have a page FULL of text (i.e. 100% width on a table), the right
margin of the text is cutoff.  I try using CSS to change the padding and/or
margins, but that only cuts off more text.  If I set my margins to 0 in the Page
setup, then I'll get all my text, but the printed page now has smaller margins
than what is really necessary and barely a margin at all.  Furthermore,a 0
margin should mean 0, period, when it's really more like .5" on all sides
(printed that is).
*** Bug 324171 has been marked as a duplicate of this bug. ***
What this looks like to me is the preview and output is adding 0.25" to all sides.  If you enter a margin of 0.5" in the you'll end up with 0.75" margins. It appears that the preview window is accurately showing what the printer prints. We just have in accurate numbers in the dialog box.
Now I'm using Gecko/20070914 Firefox/2.0.0.7.

The problem still persists but has become a little bit better.

With margins of 10, 40, and 0 the margins to the edges are always 5-7 mm to large (left: 7, right 6, top and bottom 5; 4-5 mm are outside the printable area).

When I specify a margin of 20 mm I expect to have 20 mm, not 20 mm plus the width of the unprintable area.
(In print preview, the margins left, right, and top are even 3 mm more than on paper - 3 mm are calculated with respect to the real paper width of 210 mm.)
Assignee: printing → nobody
QA Contact: printing
Blocks: 1448395
Unfortunately this is somewhat difficult to test as a real printer (unwritable margin) is needed. I did test the following:

- The pdf from bug 1448395. PDF.js sets @page margins to 0 so now this printout lines up perfectly with output from Acrobat.
- A modified example from bug 963557. I set the page margins to various inch widths and and measured everything on real paper.

One thing we may want to change is the various references in the windows printing code to printable(Width|Height)InInches. This would now be more accurate if it were something like physicalWidthInInches or pageWidthInInches. I'll defer to the reviewer if we should change this.
sorry I'm taking so long to get to this review. The changes look complex, need to find some time to dig through this. If you're3 pressed to get this landed please ping me, I'll try to find someone else to do the review.
Comment on attachment 8963640 [details]
Bug 221706 - Use unwritable region when printing on Windows.

https://reviewboard.mozilla.org/r/232526/#review248718

That was simpler thatn I originally thought. Apologies for taking so long.
Attachment #8963640 - Flags: review?(jmathies) → review+
Pushed by bdahl@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/29e58ed3f991
Use unwritable region when printing on Windows. r=jimm
https://hg.mozilla.org/mozilla-central/rev/29e58ed3f991
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Assignee: nobody → bdahl
OS: Windows 2000 → Windows
Blocks: 1493219
Version: 1.4 Branch → unspecified
No longer blocks: 1493219
Depends on: 1493219
Depends on: 1512893
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: